Markdown editor: fix overflow eating all width.

--- a/urbanvitaliz/static/css/markdownx.scss
+++ b/urbanvitaliz/static/css/markdownx.scss
@@ -8,6 +8,7 @@
     }
 
     .markdownx-preview {
-        flex-grow: 1;
+        width: 50%;
+        overflow-wrap: break-word;
     }
 }
